Helm/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer: selfsigned-clusterissuer  
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.20.185.209.18.nip.io
      secretName: grafana-tls
  rules:
    - host: grafana.20.185.209.18.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
