Helm/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer-kind: "ClusterIssuer"
    cert-manager.io/issuer: "selfsigned-clusterissuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.20.185.209.18.nip.io
      secretName: prometheus-tls
  rules:
    - host: prometheus.20.185.209.18.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
